# world-cup-predictor

./: README.md  pyproject.toml  requirements.txt
data/processed/: clean_results.csv
src/: main.py
src/api/: clean_data.py
src/evaluation/: evaluate_elo.py
src/model/: baseline.py  elo.py
src/simulation/: simulate_random.py  tournament.py
